# xlog

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  MANUAL_TESTING.md  README.md  api.jsonl  ascii.py  conanfile.py  example_network_syslog  test_structured_json
.github/workflows/: sanitizers-fuzz.yml
benchmarks/: CMakeLists.txt
cmake/: ZyrnixConfig.cmake.in  xlogConfig.cmake.in
demo/: CMakeLists_simple.txt  README.md  build.sh
demo/include/: api_handler.hpp  task_manager.hpp  user_service.hpp
demo/src/: api_handler.cpp  main.cpp  simple_demo.cpp  task_manager.cpp  user_service.cpp
docs/: MANUAL_TESTING.md  TESTING_CONTEXT_FEATURE.md  architecture.md  config.md  index.md  sinks.md  v1.0.4_FEATURES.md  v1.1.0_FEATURES.md  v1.1.1_FEATURES.md
docs/notes/: RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1-beta.1.md  RELEASE_NOTES_v1.1.1-beta.2.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.3.md  TESTING_GUIDE_v1.1.0.md  v1.0.4.md
examples/: async_logging.cpp  basic_logging.cpp  comprehensive_test.cpp  compression_example.cpp  conditional_logging.cpp  config_file_example.cpp  context_logging.cpp  custom_sink.cpp  daily_logs.cpp  file_vs_stdout.cpp  log_levels.cpp  metrics_example.cpp  minimal_build_example.cpp  multi_logger.cpp  multi_sink_example.cpp  network_syslog_example.cpp  network_test.cpp  rate_limiting_example.cpp  rotating_logs.cpp  signal_safe_example.cpp  structured_json_example.cpp  v1.1.1_beta2_features.cpp  v1.1.1_features.cpp
include/: Zyrnix.hpp
include/Zyrnix/: Zyrnix.hpp  Zyrnix_features.hpp  color.hpp  config.hpp  config_watcher.hpp  formatter.hpp  hot_reload_manager.hpp  log_context.hpp  log_filter.hpp  log_health.hpp  log_level.hpp  log_macros.hpp  log_message.hpp  log_metrics.hpp  log_record.hpp  log_sink.hpp  logger.hpp  rate_limiter.hpp  structured_logger.hpp  util.hpp
include/Zyrnix/async/: async_logger.hpp  async_queue.hpp  thread_pool.hpp
include/Zyrnix/experimental/: json_sink.hpp  network_sink.hpp
include/Zyrnix/fmt_compat/: fmt_integration.hpp  fmt_shim.hpp
include/Zyrnix/sinks/: cloud_sinks.hpp  compressed_file_sink.hpp  daily_file_sink.hpp  file_sink.hpp  loki_sink.hpp  multi_sink.hpp  null_sink.hpp  rotating_file_sink.hpp  signal_safe_sink.hpp  stdout_sink.hpp  structured_json_sink.hpp  syslog_sink.hpp  udp_sink.hpp
include/xlog/: color.hpp  config.hpp  formatter.hpp  log_filter.hpp  log_health.hpp  log_level.hpp  log_message.hpp  log_record.hpp  log_sink.hpp  logger.hpp  structured_logger.hpp  util.hpp  xlog.hpp
include/xlog/async/: async_logger.hpp  async_queue.hpp
include/xlog/experimental/: network_sink.hpp
include/xlog/sinks/: daily_file_sink.hpp  file_sink.hpp  null_sink.hpp  rotating_file_sink.hpp  signal_safe_sink.hpp  stdout_sink.hpp  structured_json_sink.hpp  syslog_sink.hpp  udp_sink.hpp
scripts/: build.sh  check_v1.1_features.sh  debug_run.sh  format.sh  install.sh  install_linux.sh  install_mac.sh  install_windows.bat  install_windows.ps1  memcheck.sh  test_all_features.sh  tidy.sh  valgrind_suppressions.supp
src/: Zyrnix.cpp  color.cpp  config.cpp  config_watcher.cpp  formatter.cpp  hot_reload_manager.cpp  log_context.cpp  log_filter.cpp  log_health.cpp  log_metrics.cpp  logger.cpp  rate_limiter.cpp  structured_logger.cpp  util.cpp  xlog.cpp
src/async/: async_logger.cpp  async_queue.cpp  thread_pool.cpp
src/experimental/: network_sink.cpp
src/experimental.disabled/: json_sink.cpp  network_sink.cpp
src/sinks/: cloud_sinks.cpp  compressed_file_sink.cpp  daily_file_sink.cpp  file_sink.cpp  loki_sink.cpp  multi_sink.cpp  null_sink.cpp  rotating_file_sink.cpp  signal_safe_sink.cpp  stdout_sink.cpp  structured_json_sink.cpp  syslog_sink.cpp  udp_sink.cpp
tests/: CMakeLists.txt  fuzz_formatter.cpp  test_all_features.sh  test_main.cpp
tools/: clang_format_all.py  generate_docs.py  generate_version.py
